<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Chip titles -->
    <string name="chip_today">Сегодня</string>
    <string name="chip_yesterday">Вчера</string>
    <string name="chip_before_yesterday">Позавчера</string>

    <string name="photo_of_the_day_stub">Фото дня</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>

    <!-- Menu -->
    <string name="search">Search</string>
    <string name="favourite">favourite</string>


</resources>