<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/JupiterTheme.GB_MaterialDesign">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_10dp_small">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedChip="@+id/chip_today"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_today"
                style="@style/MyGreyChip.GB_MaterialDesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_today"
                android:visibility="invisible" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_yesterday"
                style="@style/MyGreyChip.GB_MaterialDesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_yesterday"
                android:visibility="invisible" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_day_before_yesterday"
                style="@style/MyGreyChip.GB_MaterialDesign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_before_yesterday"
                android:visibility="invisible" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_30dp_large"
            android:hint="@string/search_wiki"
            android:visibility="invisible"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_wikipedia"
            app:endIconMode="custom"
            app:helperText="@string/wiki_helper_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_8dp_small"
        app:layout_behavior=".view.custom_view.BottomSheetBehavior">

        <com.test.application.core.custom_view.EquilateralImageView
            android:id="@+id/picture_of_the_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/photo_of_the_day_stub"
            android:scaleType="fitCenter" />

        <ProgressBar
            android:id="@+id/image_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />

    </FrameLayout>

    <include
        android:id="@+id/bottom_sheet_layout"
        layout="@layout/bottom_sheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="?attr/bottomAppBarColor"
        app:fabAlignmentMode="center"
        app:fabCradleRoundedCornerRadius="8dp"
        app:fabCradleVerticalOffset="15dp"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/MyFAB.GB_MaterialDesign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_plus_fab"
        android:tint="#FFFFFF"
        app:layout_anchor="@id/bottom_app_bar"
        tools:ignore="ContentDescription" />

    <FrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>